<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.fiery.bobby.vulgo.BroadcastDetailActivity">

    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        android:visible="true"
        android:icon="@drawable/share"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_view_location"
        android:title="@string/button_view_location"
        android:visible="true"
        android:icon="@drawable/lokasi"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_delete"
        android:title="@string/menu_delete"
        android:visible="true"
        android:icon="@drawable/hapus"
        app:showAsAction="ifRoom"/>

</menu>
