<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/tv_item_title"
            android:layout_toEndOf="@id/img_item_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/title"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/tv_item_description"
            android:layout_below="@id/tv_item_title"
            android:layout_toEndOf="@id/img_item_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:maxLines="2"/>

        <TextView
            android:id="@+id/tv_item_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_item_description"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:text="@string/date"
            android:textSize="12sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/img_item_photo"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/share"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/button_view_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:height="32dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/button_view_location"
                android:layout_weight="1"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>