<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.fiery.bobby.vulgo.NewBroadcastActivity">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/field_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginTop="16dp"
                android:hint="@string/title"
                android:maxLines="1"/>

            <EditText
                android:id="@+id/field_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/field_title"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp"
                android:hint="@string/write_your_description"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:scrollHorizontally="false"/>

            <EditText
                android:id="@+id/field_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/field_description"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp"
                android:hint="@string/write_your_contact"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:scrollHorizontally="false"/>

            <EditText
                android:id="@+id/field_reward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/field_contact"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp"
                android:hint="@string/write_your_reward"
                android:scrollHorizontally="false"/>

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/field_reward"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:hint="@string/location"
                android:textAlignment="center"
                android:maxLines="10"
                android:scrollHorizontally="false"/>

            <Button
                android:id="@+id/button_set_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_location"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/button_set_location"/>

            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_set_location"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"/>

            <Button
                android:id="@+id/button_set_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_item_photo"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/button_set_photo"/>

        </RelativeLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_submit_broadcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_navigation_check_24"/>

</RelativeLayout>